fix: center text on iOS devices

--- a/src/blocks/card/card__likes-container/card__likes-container.css
+++ b/src/blocks/card/card__likes-container/card__likes-container.css
@@ -3,5 +3,5 @@
     display: -webkit-flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    -webkit-align-items: center;
 }
